# jota-news-api

./: .dockerignore  .env  Dockerfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  dump.rdb  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  setup.py  terminal_command
.github/workflows/: aws-deploy.yml  django-tests.yml
jota_api/: __init__.py  asgi.py  celery.py  celery_app.py  settings.py  urls.py  wsgi.py
jota_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
news/: models.py  serializers.py  tasks.py  views.py
news/migrations/: 0001_initial.py  0002_initial.py
news/tests/: test_api.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
subscription/: admin.py  models.py  serializers.py  views.py
subscription/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py
